cmd/user-management/k8s/01-user-management.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
      - name: user-management
        image: uhub.service.ucloud.cn/entropypool/user-management:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-management
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 50070
    targetPort: 50070
  - name: grpc
    port: 50071
    targetPort: 50071
  - name: prometheus
    port: 50072
    targetPort: 50072
  selector:
    app: user-management
