cmd/user-management/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-management-appid-userid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: user-management-appid-userid
    k8s.kuboard.cn/workload: user-management-appid-userid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-user-management-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /api/user-management/v1/get/user/details
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/update/user
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/change/password
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/bind/email
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/bind/phone
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/update/user/phone
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/update/user/email
            backend:
              serviceName: user-management
              servicePort: 50070
    - host: api.xpool.top
      http: *http_appid_userid_rules
    - host: www.npool.top
      http: *http_appid_userid_rules
    - host: www.xpool.top
      http: *http_appid_userid_rules
    - host: www.procyon.vip
      http: *http_appid_userid_rules
    - host: procyon.vip
      http: *http_appid_userid_rules

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-management-appid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: user-management-appid
    k8s.kuboard.cn/workload: user-management-appid
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-user-management-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_appid_rules
        paths:
          - path: /api/user-management/v1/signup
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/update/user/info
            backend:
              serviceName: user-management
              servicePort: 50070
          - path: /api/user-management/v1/forget/password
            backend:
              serviceName: user-management
              servicePort: 50070
    - host: api.xpool.top
      http: *http_appid_rules
    - host: www.npool.top
      http: *http_appid_rules
    - host: www.xpool.top
      http: *http_appid_rules
    - host: www.procyon.vip
      http: *http_appid_rules
    - host: procyon.vip
      http: *http_appid_rules

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: user-management
    k8s.kuboard.cn/workload: user-management
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-user-management-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/user-management/version
            backend:
              serviceName: user-management
              servicePort: 50070
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules
    - host: www.procyon.vip
      http: *http_rules
    - host: procyon.vip
      http: *http_rules

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-user-management-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/user-management
